--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
+    "normalize-url": "^5.3.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
