--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "gh-account-exists": "^0.1.0",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
